# why-os

./: .gitignore  Cargo.toml  README.md  boot.asm  run.ps1
.cargo/: config.toml
iso/boot/grub/: grub.cfg
src/: allocator.rs  cli.rs  gdt.rs  interrupts.rs  macros.rs  main.rs  memory.rs  os_info.rs  ramfs.rs
src/allocator/: fixed_size_block.rs  linked_list.rs
src/drivers/: vga_buffer.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
