[package]
name = "why_os"
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.10"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[unstable]
build-std-features = ["compiler-builtins-mem"]
build-std = ["core", "compiler_builtins"]

[build]
target = "x86_64-why_os.json"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
